# inopay-python

./: LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: security.yml
src/inopay/: __init__.py  client.py
