[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "inopay"
version = "0.1.0a2"
description = "Inopay Python SDK — client for African capital markets infrastructure (BRVM, BVMAC, GSE)."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Inopay" }]
requires-python = ">=3.9"
keywords = ["inopay", "brokerage", "brvm", "bvmac", "gse", "africa", "fintech", "kyc", "sandbox"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "requests>=2.31",
]

[project.urls]
Homepage = "https://getinopay.com/fr/developers/sdk"
Repository = "https://github.com/fofanay/inopay-python"
Documentation = "https://getinopay.com/fr/developers"
Issues = "https://github.com/fofanay/inopay-python/issues"

[tool.setuptools.packages.find]
where = ["src"]
